Fix overflowing search results

--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -1000,7 +1000,7 @@
 
 :where(.MarkpromptSearchResultIconWrapperBordered) {
   background-color: #fff;
-  border-radius: 0.25rem;
+  border-radius: 0.375rem;
   border-style: solid;
   border-color: var(--markprompt-border);
 }
